deploy/mcp-gateway/registrations.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: acp-writer-mcp-server
spec:
  hostnames:
    - acp-writer.mcp.local
  parentRefs:
    - name: cpg-gateway
      sectionName: mcps
  rules:
    - backendRefs:
        - name: acp-writer-mcp
          port: 8090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mock-ehr-mcp-server
spec:
  hostnames:
    - mock-ehr.mcp.local
  parentRefs:
    - name: cpg-gateway
      sectionName: mcps
  rules:
    - backendRefs:
        - name: mock-ehr-mcp
          port: 8090
